templates/flink-session-cluster_template.yaml
---
# Source: flink-session-cluster/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flink-session-cluster-release-name-taskmanager
  labels:
    app: flink-session-cluster
    chart: flink-session-cluster-0.1.16
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: flink-session-cluster-taskmanager
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: flink-session-cluster
            release: release-name
      ports:
        - port: 6122
          protocol: TCP
        - port: 6121
          protocol: TCP
        - port: 6125
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: flink-session-cluster-taskmanager
              release: release-name
      ports:
        - port: 6122
          protocol: TCP
        - port: 6121
          protocol: TCP
        - port: 6125
          protocol: TCP
    - ports:
      # flink's native prometheus endpoint
      - port: 9102
        protocol: TCP
---
# Source: flink-session-cluster/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flink-session-cluster-release-name
  labels:
    app: flink-session-cluster
    chart: flink-session-cluster-0.1.16
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: flink-session-cluster
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: flink-session-cluster-taskmanager
            release: release-name
      ports:
        - port: 6123
          protocol: TCP

        - port: 6124
          protocol: TCP
    - ports:
      # flink's native prometheus endpoint
      - port: 9102
        protocol: TCP
---
# Source: flink-session-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flink-session-cluster-release-name-ui
  labels:
    app: flink-session-cluster
    chart: flink-session-cluster-0.1.16
    release: release-name
    heritage: Helm
    component: jobmanager-ui
spec:
  type: NodePort
  ports:
  - name: webui
    port: 8081
  selector:
    app: flink-session-cluster
    release: release-name
    component: jobmanager
    routed_via: release-name
---
# Source: flink-session-cluster/templates/jobmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-session-cluster-release-name
  labels:
    # the tls template will select app=chartname,release=Release.name for the service endpoint
    app: flink-session-cluster
    chart: flink-session-cluster-0.1.16
    release: release-name
    heritage: Helm
    component: jobmanager
spec:
  selector:
    matchLabels:
      app: flink-session-cluster
      release: release-name
      component: jobmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: flink-session-cluster
        component: jobmanager
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: c05ef726d33219bf4ec43ce7ada2fba3d55393ca1a8c8af66e1c74e7a0e39fac
        checksum/log4j-conf: d561b51a5fa0339d1de31ffe5047fde15609bab28cbfdae7d9de19eb2bb5c4e8
        checksum/flink-conf: b5a85cc664b40a28dd21897bbfd32036f5a028b52421e1daf43c43573ecb8feb
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      serviceAccountName: flink-session-cluster-release-name
      containers:
        # The main application container
        - name: flink-session-cluster-release-name
          image: "docker-registry.wikimedia.org/wikimedia/wikidata-query-flink-rdf-streaming-updater:latest"
          imagePullPolicy: IfNotPresent
          command: ["/opt/flink/bin/jobmanager.sh", "start-foreground", "$(POD_IP)"]
          ports:
            - containerPort: 6123
              name: rpc
            - containerPort: 6124
              name: blob-server
            - containerPort: 8081
              name: webui
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6123
          resources:
            requests:
              cpu: 100m
              memory: 700Mi
            limits:
              cpu: 200m
              memory: 800Mi
          volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf        
      volumes:        
        - name: flink-config-volume
          configMap:
            name: flink-session-cluster-release-name-flink-config
            items:
            - key: flink-conf.yaml
              path: flink-conf.yaml
            - key: log4j-console.properties
              path: log4j-console.properties
---
# Source: flink-session-cluster/templates/taskmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-session-cluster-release-name-taskmanager
  labels:
    app: flink-session-cluster-taskmanager
    chart: flink-session-cluster-0.1.16
    release: release-name
    heritage: Helm
    component: taskmanager
spec:
  selector:
    matchLabels:
      app: flink-session-cluster-taskmanager
      release: release-name
      component: taskmanager
  replicas: 1
  template:
    metadata:
      labels:
        app: flink-session-cluster-taskmanager
        component: taskmanager
        release: release-name
      annotations:
        checksum/secrets: c05ef726d33219bf4ec43ce7ada2fba3d55393ca1a8c8af66e1c74e7a0e39fac
        checksum/log4j-conf: d561b51a5fa0339d1de31ffe5047fde15609bab28cbfdae7d9de19eb2bb5c4e8
        checksum/flink-conf: b5a85cc664b40a28dd21897bbfd32036f5a028b52421e1daf43c43573ecb8feb
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      serviceAccountName: flink-session-cluster-release-name
      containers:
        # The main application container
        - name: flink-session-cluster-release-name-taskmanager
          image: "docker-registry.wikimedia.org/wikimedia/wikidata-query-flink-rdf-streaming-updater:latest"
          imagePullPolicy: IfNotPresent
          command: ["/opt/flink/bin/taskmanager.sh", "start-foreground"]
          ports:
            - containerPort: 6122
              name: rpc
            - containerPort: 6121
              name: data
            - containerPort: 6125
              name: query-state
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            tcpSocket:
              port: 6122
          resources:
            requests:
              cpu: 100m
              memory: 1000Mi
            limits:
              cpu: 200m
              memory: 1100Mi
          volumeMounts:
          - name: flink-config-volume
            mountPath: /opt/flink/conf        
      volumes:        
        - name: flink-config-volume
          configMap:
            name: flink-session-cluster-release-name-flink-config
            items:
            - key: flink-conf.yaml
              path: flink-conf.yaml
            - key: log4j-console.properties
              path: log4j-console.properties
---
# Source: flink-session-cluster/templates/tests/curl-ui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'flink-session-cluster-release-name-curl-ui'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'flink-session-cluster-release-name-curl-ui'
    image: "docker-registry.wikimedia.org/wmfdebug"
    imagePullPolicy: IfNotPresent
    args: ["curl", "http://flink-session-cluster-release-name-ui:8081"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
